--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+    ext.apolloReleaseVersion = '1.0.0-alpha3'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath "com.apollographql.apollo:apollo-gradle-plugin:$apolloReleaseVersion"
         
 
         // NOTE: Do not place your application dependencies here; they belong
