Tela para votação

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,14 +2,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.com.vandre.thestartupfest">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+
     <application
+        android:name=".app.TheStartUpFestAplicacao"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".atividades.SplashActivity"
+        <activity
+            android:name=".atividades.SplashActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.TelaCheia">
             <intent-filter>
@@ -20,6 +26,8 @@
         </activity>
 
         <activity android:name=".MainActivity"></activity>
+
+        <activity android:name=".atividades.StartupActivity"></activity>
     </application>
 
 </manifest>
